# gpu-filters

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in.gtest  LICENSE.txt  Makefile  README.txt  generate_kernels.py  generate_kernels.sh  main.cpp  picture  readme.md
apps/: filter.cpp  flowcalculator.cpp  inpainter.cpp  linedetector.cpp  picture.cpp  tests.cpp  timer.cpp
apps/gui/: FileBrowser.cpp  FilterControls.cpp  ImageFilter.cpp  readme.md
c/: c-filters.h  canny.c  canny.cpp  convolution.hpp  cutils.c  cutils.h  hough.c  hough.cpp  inpainting.c  kanade.c
canny/: Makefile  canny.c  canny.cpp  canny.h  canny.hpp  min.c
entrega/: .gitignore  Makefile  README.md  README.txt
entrega/c/: c-filters.h  canny.c  convolution.h  cutils.h
entrega/include/: ProgressBar.hpp  debug.h
entrega/inpainter_app/: Makefile  inpainter.cpp
entrega/opencl/: canny.cpp  clutils.cpp  convolution2D.cl  hough.cl  kanade.cpp  opencl-filters.hpp
entrega/realtime app/: FileBrowser.hpp  gpu-filters.pro  hitcounter.cpp  moc_camera.cpp  static_headers.hpp
entrega/realtime_app/: ControlsWindow.hpp  ImageFilter.cpp  VideoWindow.cpp  gpu-filters.pro  main.cpp
entrega/timer app/: Makefile
entrega/timer_app/: Makefile  timer.cpp
gui/: .gitignore  ControlsWindow.cpp  ControlsWindow.hpp  FancySlider.cpp  FancySlider.hpp  FilterControls.cpp  FilterControls.hpp  ImageFilter.cpp  ImageFilter.hpp  Makefile  VideoStreamer.cpp  VideoStreamer.hpp  VideoWindow.cpp  VideoWindow.hpp  camera.cpp  camera.hpp  filters.cpp  filters.hpp  gpu-filters.pro  hitcounter.cpp  hitcounter.hpp  main.cpp  readme.md  static_headers.hpp  window.cpp  window.hpp
gui/opencl/: canny.cl  hough.cl  inpainting.cl  kanade.cl
hough/: Makefile  hough.c  hough.cpp  hough.hpp
include/: ProgressBar.hpp  debug.h  opencl-filters.hpp
inpainter_app/: inpainter.cpp
libs/: Makefile  clhelper.cpp  clhelper.hpp  libs.c  libs.cpp  libs.h  libs.hpp
opencl/: canny.cl  canny.cpp  clutils.cpp  hough.cl  hough.cpp  inpainting.cl  inpainting.cpp  kanade.cl  kanade.cpp  libs.cpp  opencl-filters.hpp
realtime_app/: ControlsWindow.cpp  FilterControls.cpp
sandbox/OpenCV/: Makefile  opencv.cpp
sandbox/SDL/: Makefile  sdl.cpp
src/apps/: filter.cpp  flowcalculator.cpp  inpainter.cpp  linedetector.cpp  timer.cpp
src/c/: canny.c  cutils.h  hough.c  inpainting.c
src/filters/c/: kanade.c
src/filters/opencl/: libs.cpp
src/gui/: .gitignore  ImageFilter.hpp  VideoStreamer.hpp
src/opencl/: clutils.cpp  hough.cpp  inpainting.cl  inpainting.cpp  kanade.cpp  libs.cpp
src/test/: canny_test.cpp  hough_test.cpp  misc_test.cpp  utils.hpp
test/: canny_test.cpp  comparison_tests.cpp  hough_test.cpp  misc_test.cpp  utils.cpp
timer_app/: timer.cpp
ui/: hitcounter.cpp
utils/: profiler.h
